# MyAssistC

./: CMakeLists.txt  README.md
source/: getSignal.cpp  inputHandle.cpp  main.cpp  myHead.h  myKeyboard.cpp  myMouse.cpp  myWin.cpp
